# deepstream-video-pipeline

./: CMakeLists.txt  Makefile  ds_trt_tsc_bridge.cpp  export_tsc.py
